k8s/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-api-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-api
      version: canary
  template:
    metadata:
      labels:
        app: clinic-api
        version: canary
    spec:
      containers:
        - name: clinic-api
          image: us-central1-docker.pkg.dev/clinic-management-canary/clinic-repo/clinic-management-api:canary
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
