k8s/stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-api-stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clinic-api
      version: stable
  template:
    metadata:
      labels:
        app: clinic-api
        version: stable
    spec:
      containers:
        - name: clinic-api
          image: us-central1-docker.pkg.dev/clinic-management-canary/clinic-repo/clinic-management-api:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
